# VotingMachine

./: .gitignore  89 files list.txt  Code89Filesv1.txt  create_vm_tree.py  promptNext - Copie.xlsx  promptNext.xlsx  prompts for tech spec files.txt  prompts for tech spec files.xlsx  template lean pre-coding.txt
Backup/DOCUMENTATION/: Annex B — Canonical Test Pack.md  Annex C — Glossary & Definitions.md  Doc 1 — Database Specification (Entities, Fields, Relationships).md  Doc 4 — Algorithm Specification (Steps, Allocation, Gates & Edge Cases).md  Doc 7 — Reporting Specification (Structure, Templates & Visual Rules).md
Backup/DOCUMENTATION/Archives/: Doc 2 — Common Variables Specification (Core, Operational Defaults, Advanced Controls).docx  Doc 3 — Technical Platform & Release Policy.docx
Backup/v1/: .gitattributes  .gitignore  .pre-commit-config.yaml  SECURITY.md  rust-toolchain.toml
Backup/v1/crates/vm_cli/: Cargo.toml
Backup/v1/crates/vm_core/: Cargo.toml
Backup/v1/crates/vm_core/src/: entities.rs  rng.rs  rounding.rs  variables.rs
Backup/v1/schemas/: ballot_tally.schema.json  manifest.schema.json  parameter_set.schema.json
Backup/v1/tests/: determinism.rs  vm_tst_core.rs  vm_tst_mmp.rs  vm_tst_ranked.rs
DOCUMENTATION/: Addendum 1A — Formula ID & Canonical Serialization (Normative).docx  Addendum 1B — Compatibility & Migration (Informative).docx  Annex A — Variable Canonical Reference Table.docx  Annex A — Variable Canonical Reference Table.md  Annex B — Part 0_ Schema & Conventions.docx  Annex C — Glossary & Definitions.docx  Doc 2 — Common Variables Specification (Core, Operational Defaults, Advanced Controls).docx  Doc 2 — Common Variables Specification (Core, Operational Defaults, Advanced Controls).md  Doc 3 — Technical Platform & Release Policy.md  Doc 5 — Processing Pipeline Specification (State Machine & Functions).md  Doc 6 — Test Specifications (Allocation, Gates, Frontier & Determinism).docx  Doc 6 — Test Specifications (Allocation, Gates, Frontier & Determinism).md  Doc 7 — Reporting Specification (Structure, Templates & Visual Rules).docx
DOCUMENTATION/Archives/: Addendum Doc1-7 – Integration & Cross-Reference Notes for Doc 2B.docx  Annex A — Variable Canonical Reference Table.docx  Doc 1 — Database Specification (Entities, Fields, Relationships).docx  Doc 4 — Algorithm Specification (Steps, Allocation, Gates & Edge Cases).docx  Doc 5 — Processing Pipeline Specification (State Machine & Functions).docx
DOCUMENTATION/Archives/MD/: Addendum Doc1-7 – Integration & Cross-Reference Notes for Doc 2B.md  Annex B — Part 0_ Schema & Conventions.md  Doc 1 — Database Specification (Entities, Fields, Relationships) (1).md  Doc 2 — Common Variables Specification (Core, Operational Defaults, Advanced Controls).md  Doc 7 — Reporting Specification (Structure, Templates & Visual Rules).md
DOCUMENTATION/FilesSkelleton/Archives/: 01 - Workspace Manifest Cargo.toml, Version FormulaID VM-ENGINE v0).docx  03 - .cargo config.toml, Version FormulaID VM-ENGINE v0).docx  06 - .gitattributes, Version FormulaID VM-ENGINE v0).docx  10 - LICENSE, Version FormulaID VM-ENGINE v0).docx  12 - SECURITY.md, Version FormulaID VM-ENGINE v0).docx  13 - schemas division_registry.schema.json, Version FormulaID VM-ENGINE v0).docx  19 - schemas run_record.schema.json, Version FormulaID VM-ENGINE v0).docx  20 - schemas frontier_map.schema.json, Version FormulaID VM-ENGINE v0).docx  23 - crates vm_core src ids.rs, Version FormulaID VM-ENGINE v0).docx  27 - crates vm_core src rounding.rs, Version FormulaID VM-ENGINE v0).docx  29 - crates vm_io Cargo.toml, Version FormulaID VM-ENGINE v0).docx  34 - crates vm_io src loader.rs, Version FormulaID VM-ENGINE v0).docx  38 - crates vm_algo src tabulation approval.rs, Version FormulaID VM-ENGINE v0).docx  40 - crates vm_algo src tabulation ranked_irv.rs, Version FormulaID VM-ENGINE v0).docx  43 - crates vm_algo src allocation dhondt.rs, Version FormulaID VM-ENGINE v0).docx  46 - crates vm_algo src mmp.rs, Version FormulaID VM-ENGINE v0).docx  47 - crates vm_algo src gates_frontier.rs, Version FormulaID VM-ENGINE v0).docx  74 - tests vm_tst_core.rs.docx  (+23 more)
DOCUMENTATION/FullRawChatGPTChats/: part1.docx  part2.docx  part3.docx  part4.docx  part5.docx  part6.docx  part7.docx
voting-machine/: .editorconfig  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  bundle_89.py
voting-machine/.cargo/: config.toml
voting-machine/bundles/: data_tests.txt  manifest.txt  root.txt  schemas.txt  vm_algo.txt  vm_app.txt  vm_cli.txt  vm_core.txt  vm_io.txt  vm_pipeline.txt  vm_report.txt
voting-machine/crates/vm_algo/: Cargo.toml
voting-machine/crates/vm_algo/src/: gates_frontier.rs  lib.rs  mmp.rs
voting-machine/crates/vm_algo/src/allocation/: dhondt.rs  largest_remainder.rs  sainte_lague.rs  wta.rs
voting-machine/crates/vm_algo/src/tabulation/: approval.rs  plurality.rs  ranked_condorcet.rs  ranked_irv.rs  score.rs
voting-machine/crates/vm_app/: Cargo.toml
voting-machine/crates/vm_app/src-tauri/: tauri.conf.json
voting-machine/crates/vm_app/src-tauri/src/: main.rs
voting-machine/crates/vm_app/ui/: index.html
voting-machine/crates/vm_app/ui/src/: main.ts
voting-machine/crates/vm_cli/src/: args.rs  main.rs
voting-machine/crates/vm_core/src/: determinism.rs  ids.rs  lib.rs  rng.rs  variables.rs
voting-machine/crates/vm_io/: Cargo.toml
voting-machine/crates/vm_io/src/: canonical_json.rs  hasher.rs  lib.rs  loader.rs  manifest.rs
voting-machine/crates/vm_pipeline/: Cargo.toml
voting-machine/crates/vm_pipeline/src/: aggregate.rs  allocate.rs  build_result.rs  build_run_record.rs  label.rs  lib.rs  load.rs  map_frontier.rs  resolve_ties.rs  tabulate.rs  validate.rs
voting-machine/crates/vm_report/src/: lib.rs  render_html.rs  render_json.rs  structure.rs
voting-machine/fixtures/annex_b/part_0/: ballots.json  manifest.json  parameter_set.json
voting-machine/schemas/: ballots.schema.json  division_registry.schema.json  frontier_map.schema.json  result.schema.json  run_record.schema.json
voting-machine/tests/: vm_tst_gates.rs
(+202 files in other folders)
