[package]
name = "vm_io"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
description = "Canonical JSON I/O, schema validation, and input digests for VM pipeline"
repository = "https://example.invalid/repo"

[features]
# Keep these feature names for compatibility, but they do nothing now.
# The corresponding crates are non-optional because they are used unconditionally in code.
default = []
path_utf8 = []
hash = []
serde = []

[dependencies]
camino = "1.1"                       # Utf8Path / Utf8PathBuf used in public structs
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"                   # used throughout canonical_json.rs, loader.rs, manifest.rs
thiserror = "1.0"                    # error types in loader/manifest
sha2 = "0.10"                        # verify_digests in manifest.rs
digest = "0.10"                      # sha2 trait dependency; explicit for clarity
itertools = "0.13"                   # if used by mapping/normalization helpers (retain if present)

# If you have schema validation helpers or other internal crates, keep them here:
# schemars = "0.8"                   # (only if actually used)
# regex = "1"                        # (only if actually used)

[dev-dependencies]
serde_json = { version = "1.0", features = ["preserve_order"] }
